style.css
/* ... */
.overlay p {
  color: #f8f5ec;
  font-family: "Josefin-Regular";
  font-size: 18px;
  text-align: left;
}

.overlay span {
  color: #89bcd9;
}

.overlay h3 {
  color: #89bcd9;
  padding-top: 24px;
}

.legal-notice-container {
  padding-left: 200px;
  padding-right: 208px;
}

.legal-notice-container h2 {
  padding-top: 65px;
}

.cursor {
  color: #f8f5ec;
  animation: blink 0.7s infinite;
}

@keyframes blink {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
}

.location-info {
  display: flex;
  align-items: center;
}

